[tool.poetry]
name = "ommnia-sso-client"
version = "0.1.0"
description = "The client for the Ommnia SSO system"
authors = ["Luke A.C.A. Rieff - Ommnia Systems"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gql = "^3.5.0"
aiohttp = "^3.10.1"
pydantic = "^2.8.2"
cryptography = "^43.0.0"
PyJWT = "^2.9.0"
ommnia-permission-tree = {git = "https://github.com/ommnia-lrieff/ommnia_permission_tree.git"}
ommnia-sso-tokens = {git = "https://github.com/ommnia-lrieff/ommnia_sso_tokens.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
